Address code review feedback - use Set.of() and add HashMap import
Co-authored-by: earlb710 <54583240+earlb710@users.noreply.github.com>